# obs-wayland-hotkey

./: .audit-test-1780476706  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LINUX_USAGE.md  README.md  TODO.md  background.md  build.sh  config.go  create_autostart_service.sh  flake.nix  go.mod  go.sum  hotkeys.py  install.sh  main.go  main.py  main_test.go  main_wayland.py  obsclient_test.go  requirements.txt  result  run.sh  setup.sh  setup_sudo.sh  validate_install.sh
.dracon/: project-state.md
.github/workflows/: ci.yml  release.yml
.ralph/: fix-all-review-findings.md  fix-all-review-findings.state.json  fix-review-findings.md  fix-review-findings.state.json  fix-todo-items-v2.md  fix-todo-items-v2.state.json  fix-todo-items.md  fix-todo-items.state.json
docs/: competitors-and-extensions.md  macros.md  tier1-observability.md  value-add.md
nix/: module.nix
src/: ansi.rs  banner.rs  config.rs  http_api.rs  input.rs  main.rs  notify.rs  obs.rs  service.rs
