[package]
name = "obs-hotkey"
version = "1.0.51"
edition = "2021"
license = "MIT"
description = "Lightweight Rust daemon for controlling OBS Studio with global hotkeys on Wayland and X11"
repository = "https://github.com/DraconDev/obs-wayland-hotkey"
keywords = ["obs-studio", "hotkey", "wayland", "evdev", "streaming"]
categories = ["command-line-utilities", "multimedia::encoding", "os::linux-apis"]
readme = "README.md"

[[bin]]
name = "obs-hotkey"
path = "src/main.rs"

[dependencies]
evdev = "0.13"
tungstenite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
ctrlc = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
